--- a/Assets/Scripts/UI/Inventory/InventoryUI.uss
+++ b/Assets/Scripts/UI/Inventory/InventoryUI.uss
@@ -99,6 +99,8 @@
   border-bottom-width: 2px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+
+  background-color: rgba(255, 0, 255, 0.5);  
 }
 
 .inventory__header__pages {
@@ -121,7 +123,7 @@
   margin-bottom: 0px;
 
   width: 70px;
-  height: 75px;
+  height: 35px;
 
   border-radius: 5px;
   border-width: 2px;
@@ -153,7 +155,7 @@
   margin-bottom: 0px;
 
   width: 70px;
-  height: 50px;
+  height: 35px;
 
   border-radius: 5px;
   border-width: 2px;
