--- a/Assets/Scripts/UI/Inventory/InventoryUI.uxml
+++ b/Assets/Scripts/UI/Inventory/InventoryUI.uxml
@@ -11,7 +11,7 @@
     <VisualElement class="inventory__container" name="_InventoryContainer">
 
       <VisualElement class="inventory__header">
-        <Label class="inventory__header__title" text="" name="_headerTitle"/>
+        <!-- <Label class="inventory__header__title" text="" name="_headerTitle"/> -->
 
         <!-- Element to hold the page buttons -->
 
